plugins {
	id "org.springframework.boot" version "${springBootVersion}"
	id "io.spring.dependency-management" version "1.0.13.RELEASE"
	id "java"
}

group = "walerowicz.pawel"
version = "${projectVersion}"
sourceCompatibility = "17"

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
	implementation "org.springframework.boot:spring-boot-starter-webflux:${springBootVersion}"
	implementation "org.springframework.boot:spring-boot-starter-validation:${springBootVersion}"
	implementation "org.apache.commons:commons-lang3:${apacheCommonsLangVersion}"
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
	testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
	testImplementation "com.squareup.okhttp3:okhttp:${okHttpVersion}"
	testImplementation "com.squareup.okhttp3:mockwebserver:${okHttpVersion}"
}

tasks.named("test") {
	useJUnitPlatform()
}

tasks {
	bootJar {
		archiveFileName.set("${rootProject.name}.jar")
	}
}